cvlr-hook/tests/expand/test_hook_error.stderr
error: expected `fn`
  --> tests/expand/test_hook_error.rs:10:1
   |
10 | struct S1 {
   | ^^^^^^
